# macops-MOLXPCConnection

./: BUILD  MODULE.bazel  MOLXPCConnection.podspec  Podfile  README.md  WORKSPACE  non_module_deps.bzl
MOLXPCConnection/: MOLXPCConnection.h  MOLXPCConnection.m
MOLXPCConnection.xcodeproj/: project.pbxproj
MOLXPCConnection.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
MOLXPCConnection.xcworkspace/: contents.xcworkspacedata
MOLXPCConnectionTests/: MOLXPCConnectionTests.m
Source/MOLXPCConnection/: MOLXPCConnection.h  MOLXPCConnection.m
Tests/: MOLXPCConnectionTests.m
